--- a/microservice/pom.xml
+++ b/microservice/pom.xml
@@ -5,14 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>1.5.7.RELEASE</version>
 	</parent>
 	<groupId>com.encora</groupId>
-	<artifactId>skytouch-exercise</artifactId>
+	<artifactId>skt-microservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>skytouch-exercise</name>
-	<description>Demo project for Sky touch new members</description>
+	<name>skt-microservice</name>
+	<description>Demo project for Microservice app</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
